<resources>
    <string name="app_name">GameNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="news_title">News</string>
    <string name="games_menu_title">Games</string>
    <string name="lol_menu_title">League of legends</string>
    <string name="dota_menu_title">Dota</string>
    <string name="csgo_menu_title">CS GO</string>
    <string name="settings_menu_title">Settings</string>
    <string name="favorites_menu_title">Favorites</string>
    <string name="search">search</string>
    <string name="get_started">Just a few details to get you started</string>
    <string name="get_startedword">Get Started</string>

    <string name="sign_in_text"><u>sign in</u></string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in_comment">Just a few details before you get logged</string>
    <string name="sign_in_hithere">Hi there, ready to log in?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register"><u>register</u></string>
    <string name="logout">Logout</string>
    <string name="already_registered">Already registered?,</string>
    <string name="sign_in">sign in</string>
    <string name="not_registered_yet">Not registered yet?,</string>
    <string name="tab_news">News</string>
    <string name="tab_top_players">Top Players</string>
    <string name="tab_preview">Preview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_btn">Update</string>
    <string name="just_change_it">Just change it!</string>
    <string name="internal_error">Ups, Something went wrong...</string>
    <string name="api_error">Ups, server not found...</string>
    <string name="success">Nice!, Everything went like planned!</string>
    <string name="snackbar_nointernet">Hey no changing data!, No internet connection!</string>
    <string name="question">Leaving early?</string>
    <string name="exit_question">Are you sure?</string>
    <string name="save_password">Save</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current password</string>
    <string name="update_password_text">Update your password</string>
    <string name="please_fill_the_following_fields_to_update_your_password">Please fill the following fields to update your password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_updated">Password updated</string>
    <string name="password_not_match">The old password not match</string>
    <string name="password_notmatch">Confirm password not match</string>
    <string name="is_empty">Please fill the field</string>
    <string name="error">Error</string>

</resources>
