<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/menu_news_selection"
            android:title="@string/news_title" />
        <item
            android:title="@string/games_menu_title">
            <menu>
                <item
                    android:id="@+id/menu_lol_selection"
                    android:title="@string/lol_menu_title" />
                <item
                    android:id="@+id/menu_dota_selection"
                    android:title="@string/dota_menu_title" />
                <item
                    android:id="@+id/menu_csgo_selection"
                    android:title="@string/csgo_menu_title" />
            </menu>
        </item>


    <item
        android:id="@+id/settings_menu_selection"
        android:title="@string/settings_menu_title" />
    <item
        android:id="@+id/favorites_menu_selection"
        android:title="@string/fevorites_menu_title" />
    <item
        android:id="@+id/logout_menu_selection"
        android:title="@string/logout" />

</menu>
