<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/login">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/transparent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_hithere"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                style="@style/firsttextlog" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_comment"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                style="@style/firsttextlog" />

            <EditText
                android:id="@+id/usernamelogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_user_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"

                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp" />

            <EditText
                android:id="@+id/userPasswordlogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_pass_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp" />


            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:text="@string/sign_in_text"
                android:textStyle="normal"
                android:background="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_registered_yet"

                    />

                <TextView
                    android:id="@+id/register_access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textStyle="bold"
                    android:textColor="#334fff" />

            </LinearLayout>
        </LinearLayout>


    </ScrollView>


</LinearLayout>
