<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blurred_back">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_startedword"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                style="@style/firsttextlog"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:textSize="12sp"
                android:layout_marginBottom="30dp"
                style="@style/firsttextlog"
                />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_user_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/userEmail"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_pass_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:id="@+id/userPassword"
                android:layout_marginBottom="10dp"

                android:paddingLeft="10dp" />

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirm_password"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_confirm_icon"
                android:textSize="14sp"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:id="@+id/userCPassword"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:text="@string/register"
                android:textStyle="normal"
                android:background="@drawable/register_button"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_registered"

                    />

                <TextView
                    android:id="@+id/sign_in_access"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_text"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textStyle="bold"
                    android:textColor="#334fff" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>
